# data-compat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  data-compat.cabal  shell.nix
.circleci/: config.yml
src/Data/: Compat.hs
