cabal-version:       2.2
name:                data-compat
version:             0.1.0.0
synopsis:            Define Backwards Compatibility Schemes for Arbitrary Data
description:         Define Backwards Compatibility Schemes for Arbitrary Data
homepage:            https://github.com/TravisWhitaker/data-compat
bug-reports:         https://github.com/TravisWhitaker/data-compat
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2019
category:            Data
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Compat
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , constraints
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
